fix: fix body shift when modal or menu are open

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -73,7 +73,7 @@ html {
 
 body {
   margin: 0;
-  background-color: var(--bg-color-add);
+  background-color: var(--bg-color-main);
   font-family: var(--font-family);
   font-size: 16px;
   font-weight: 400;
